# tron

./: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  README.md  Release.toml
.github/workflows/: docker-release.yml  release.yaml  release.yml
lobby/: build.gradle.kts  settings.gradle.kts
lobby/gradle/wrapper/: gradle-wrapper.properties
lobby/src/main/kotlin/: Main.kt
proto/: balance.proto  bridge.proto  bug.proto  bug_report.proto  chat.proto  common.proto  friends.proto  leaderboard.proto  messaging.proto  perms.proto  player.proto  prefix.proto  proxy.proto  redeem.proto  report.proto  scoreboard.proto  security.proto  server.proto  servers.proto  session.proto  shop.proto  teams.proto
proxy/: build.gradle.kts
proxy/run/: forwarding.secret  velocity.toml
proxy/run/lang/: messages_ar_SA.properties  messages_bg_BG.properties  messages_cs_CZ.properties  messages_da_DK.properties  messages_de_DE.properties  messages_es_ES.properties  messages_et_EE.properties  messages_fi_FI.properties  messages_fr_FR.properties  messages_he_IL.properties  messages_hu_HU.properties  messages_it_IT.properties  messages_ja_JP.properties  messages_ko_KR.properties  messages_nb_NO.properties  messages_nl_NL.properties  messages_nn_NO.properties  messages_pl_PL.properties  messages_pt_BR.properties  messages_ro_RO.properties  messages_ru_RU.properties  messages_sk_SK.properties  messages_sq_AL.properties  messages_sr_CS.properties  messages_sr_Latn.properties  messages_sv_SE.properties  messages_tl_PH.properties  messages_tr_TR.properties  messages_uk_UA.properties  messages_vi_VN.properties  messages_zh_CN.properties  messages_zh_HK.properties  messages_zh_TW.properties
proxy/run/plugins/bStats/: config.txt
proxy/src/main/kotlin/com/h01/tron/: leaderboards.kt  proxy.kt
proxy/src/main/kotlin/com/h01/tron/animations/: welcome.kt
proxy/src/main/kotlin/com/h01/tron/commands/: Admin.kt  Economy.kt  Friends.kt  Prefix.kt  Teams.kt
proxy/src/main/kotlin/com/h01/tron/events/: Session.kt
proxy/src/main/kotlin/com/h01/tron/listeners/: ServerSendMessageListener.kt
proxy/src/main/templates/com/h01/tron/: BuildConstants.java
tron/: Cargo.toml  build.rs
tron-bot/: Cargo.toml
tron-macros/: Cargo.toml
tron-macros/src/: lib.rs
tron-protos/: Cargo.toml  build.rs
tron-protos/proto/: balance.proto  bridge.proto  common.proto  perms.proto  player.proto  prefix.proto  proxy.proto  redeem_code.proto  scoreboard.proto  servers.proto  session.proto  shop.proto  teams.proto
tron-protos/src/: lib.rs
tron/src/: grpc.rs  lib.rs  logger.rs  main.rs
tron/src/cache/: mod.rs  player.rs  prefix.rs  shop_item.rs  team.rs
tron/src/collections/: bug.rs  mod.rs  player.rs  prefix.rs  redeem.rs  report.rs  server.rs  shop_item.rs  team.rs
tron/src/config/: catalog.rs  messages.rs  mod.rs  release.rs  titles.rs
tron/src/models/: achievements.rs  bug.rs  cache.rs  databases.rs  leaderboards.rs  message.rs  mod.rs  player.rs  prefix.rs  redeem.rs  report.rs  server.rs  servers.rs  shop_item.rs  team.rs
tron/src/modules/: bug.rs  indexes.rs  leaderboard.rs  mod.rs  player.rs  prefix.rs  redeem.rs  report.rs  server.rs  shop_item.rs  team.rs
tron/src/requests/: balance.rs  friends.rs  join.rs  leaderboard.rs  leave.rs  message.rs  mod.rs  shop.rs  team.rs
tron/src/requests/balance/: get.rs  transfer.rs
tron/src/requests/bug/: delete.rs  get.rs  get_all.rs  list_all.rs  mod.rs  view.rs
tron/src/requests/chat/: exit.rs  friend.rs  friend_request.rs  global.rs  hindi.rs  mod.rs  team.rs
tron/src/requests/friends/: accept.rs  get.rs  list_friends.rs  list_requests.rs  mod.rs  reject.rs  remove.rs  requests.rs  send.rs
tron/src/requests/leaderboards/: coins.rs  deaths.rs  kda.rs  kills.rs  list_coins.rs  list_deaths.rs  list_kda.rs  list_kills.rs  list_overall.rs  list_team.rs  mod.rs  overall.rs  team.rs
tron/src/requests/perms/: demote.rs  get_admins.rs  get_moderators.rs  list_admins.rs  list_moderators.rs  mod.rs  promote.rs  promote_admin.rs  promote_moderator.rs  team.rs
tron/src/requests/players/: break_block.rs  death.rs  kill.rs  mod.rs  place_block.rs  report.rs
tron/src/requests/prefix/: buy.rs  create.rs  delete.rs  equip.rs  get_all.rs  get_current.rs  get_owned.rs  list_all.rs  list_owned.rs  mod.rs  select.rs  unequip.rs
tron/src/requests/proxy/: ban_player.rs  emit_message.rs  emit_whisper.rs  handshake.rs  heartbeat.rs  kick_player.rs  message_player.rs  mod.rs  server_offline.rs  title_player.rs  transfer_player.rs
tron/src/requests/redeem/: create.rs  delete.rs  get_all.rs  list_all.rs  mod.rs  view.rs
tron/src/requests/report/: delete.rs  get.rs  get_all.rs  list_all.rs  mod.rs  view.rs
tron/src/requests/scoreboard/: get.rs  mod.rs  status.rs  toggle.rs
tron/src/requests/servers/: create.rs  delete.rs  get.rs  get_all.rs  inc_coins.rs  landing.rs  list_all.rs  lobby_shutdown.rs  lobby_startup.rs  mod.rs  proxy_shutdown.rs  proxy_startup.rs  survival_shutdown.rs  survival_startup.rs  view.rs
tron/src/requests/session/: encryption.rs  floodgate.rs  join.rs  leave.rs  login.rs  logout.rs  mod.rs  password.rs  post.rs  pre.rs
tron/src/requests/session/login/: encryption.rs  floodgate.rs  mod.rs  password.rs  post.rs  pre.rs
tron/src/requests/shop/: buy.rs  create.rs  delete.rs  get.rs  get_all.rs  list_all.rs  sell.rs  view.rs
tron/src/requests/team/: accept_invite.rs  all.rs  create.rs  delete.rs  get.rs  get_members.rs  get_open.rs  get_open_teams.rs  get_team_requests.rs  get_teams.rs  join.rs  leave.rs  list_members.rs  list_open_teams.rs  list_team_requests.rs  list_teams.rs  members.rs  mod.rs  promote_player.rs  reject_invite.rs  remove.rs  send_invite.rs
tron/src/state/: auth.rs  messaging.rs  mod.rs  permissions.rs  player.rs  prefix.rs  redeem.rs  server.rs  shop_item.rs  team.rs
tron/src/utils/: error.rs  format_message.rs  get.rs  join.rs  leaderboards.rs  math.rs  message.rs  mod.rs  mongodb.rs  name_generator.rs  redis.rs  release.rs  serde.rs  templates.rs  title.rs
tron/tests/collections/: player.rs
