[workspace]
resolver = "2"
members = [
"tron",
"tron-bot"
]

[workspace.dependencies]
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/h01-team/tron"
