[workspace]
resolver = "2"
members = [
"tron",
"tron-bot"
,
"tron-macros"
, "tron-protos"]

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.85"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"
heck = "0.5.0"
indexset = "0.3.0"
mockall = "0.13.1"
mongodb = "3.3.0"
names = "0.14.0"
once_cell = "1.20.2"
proc-macro2 = "1.0.103"
prost = "0.14.1"
quote = "1.0.42"
rand = "0.9.0"
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
serde = "1.0.228"
serde_json = "1.0.137"
serial_test = "3.2.0"
snowflaked = { version = "1.0.3", features = ["sync"] }
syn = "2.0.109"
temp-env = "0.3.6"
text_placeholder = "0.5.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"


[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/h01-team/tron"

[workspace.metadata.release]
publish = false
