[package]
name = "tron-bot"
version.workspace = true
edition = "2024"

description = "TRON Bot — Discord bot for H01 minecraft server"
license = "MIT"
repository = "https://github.com/h01-team/tron"
documentation = "https://docs.rs/tron-bot"
homepage = "https://h01.in"

[dependencies]
tron-protos = { path = "../tron-protos", version = "0.1.7" }
