[package]
name = "tron-macros"
version.workspace = true
edition = "2024"
description = "TRON — Turbo MINECRAFT SERVER"
license = "MIT"
repository = "https://github.com/h01-team/tron"
documentation = "https://docs.rs/tron"
homepage = "https://h01.in"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.109"
tracing.workspace = true
