[package]
name = "tron-macros"
version.workspace = true
edition = "2024"
description = "TRON — Turbo MINECRAFT SERVER"
license = "MIT"
repository = "https://github.com/h01-team/tron"
documentation = "https://docs.rs/tron"
homepage = "https://h01.in"

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing.workspace = true
