[package]
name = "tron-protos"
description = "Package to import tron protobuf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "proto/**/*",
    "Cargo.toml"
]

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
