[package]
name = "tron"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6.1.0"
mongodb = "3.3.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing.workspace = true
tracing-appender = {workspace = true}
tracing-subscriber = {workspace = true}
anyhow = {workspace=true}
snowflaked = { version = "1.0.3", features = ["sync"] }
chrono = "0.4.42"
redis = { version = "0.32.7", features = ["tokio-comp"] }
censor = "0.3.0"
whatlang = "0.18.0"
futures = "0.3.31"
tokio-retry = "0.3.0"
once_cell = "1.21.3"
tokio-stream = "0.1.17"
async-trait = "0.1.89"
mockall = "0.13.1"
async-stream = "0.3.6"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"
tracing-test = "0.2.5"
