[package]
name = "tron"
version.workspace = true
edition = "2024"
include = [
    "src/**/*",
    "build.rs",
    "../proto/**/*",
    "Cargo.toml"
]
description = "TRON — H01 MINECRAFT SERVER"
license = "MIT"
repository = "https://github.com/h01-team/tron"
documentation = "https://docs.rs/tron"
homepage = "https://h01.in"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6.1.0"
mongodb = "3.3.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing.workspace = true
tracing-appender = {workspace = true}
tracing-subscriber = {workspace = true}
anyhow = {workspace=true}
snowflaked = { version = "1.0.3", features = ["sync"] }
chrono = "0.4.42"
redis = { version = "0.32.7", features = ["tokio-comp"] }
censor = "0.3.0"
whatlang = "0.18.0"
futures = "0.3.31"
tokio-retry = "0.3.0"
once_cell = "1.21.3"
tokio-stream = "0.1.17"
async-trait = "0.1.89"
mockall = "0.13.1"
async-stream = "0.3.6"
indexset = "0.12.3"
text_placeholder = "0.5.1"
rand = "0.9.2"
names = "0.14.0"
serde_json = "1.0.145"
tron-macros = { path = "../tron-macros", version = "0.1.7" }
argon2 = "0.5.3"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"
tracing-test = "0.2.5"
