[package]
name = "tron"
version.workspace = true
edition = "2024"
description = "TRON — Turbo MINECRAFT SERVER"
license = "MIT"
repository = "https://github.com/h01-team/tron"
documentation = "https://docs.rs/tron"
homepage = "https://h01.in"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
indexset.workspace = true
mockall.workspace = true
mongodb.workspace = true
names.workspace = true
once_cell.workspace = true
rand.workspace = true
redis.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snowflaked.workspace = true
text_placeholder.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tron-macros = { path = "../tron-macros" }
tron-protos = { path = "../tron-protos" }

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"
tracing-test = "0.2.5"
